--- a/vibeapp/.env.example
+++ b/vibeapp/.env.example
@@ -1,5 +1,7 @@
-# .env.example
+# Spotify OAuth
 SPOTIFY_CLIENT_ID=your_client_id_here
 SPOTIFY_CLIENT_SECRET=your_client_secret_here
 SPOTIFY_REDIRECT_URI=http://siteLink/callback
+
+# Flask secret key
 SECRET_KEY=your_secret_key
