--- a/vibeapp/.env.example
+++ b/vibeapp/.env.example
@@ -1,5 +1,8 @@
 # .env.example
+
+SECRET_KEY=your_secret_key
+
+#spotify
 SPOTIFY_CLIENT_ID=your_client_id_here
 SPOTIFY_CLIENT_SECRET=your_client_secret_here
-SPOTIFY_REDIRECT_URI=http://siteLink/callback
-SECRET_KEY=your_secret_key
+SPOTIFY_REDIRECT_URI=http://siteLink/callback/spotify
